2004-04-12	blytkerchan
	* compare_and_exchange.h: be slightly more verbose in comments
	* set.h: new file

2004-04-08	blytkerchan
	* compare_and_exchange.h: add 2004 to the license's years
	* decrement.h: ditto
	* increment.h: ditto

2004-02-10	blytkerchan
	* compare_and_exchange.h: minor prototype fix

2004-02-03	blytkerchan
	* increment.h (atomic_increment): don't return a value
	* decrement.h (atomic_decrement): ditto

2003-01-06	blytkerchan
	* increment.h: new file
	* decrement.h: ditto

2003-10-18	blytkerchan
	* compare_and_exchange.h: moved from ../i486