@@ -1,3 +1,9 @@
+2004-05-07	blytkerchan
+	* compare_and_exchange.h: add C++ guards
+	* set.h: ditto
+	* increment.h: ditto
+	* decrement.h: ditto
+
 2004-04-12	blytkerchan
 	* compare_and_exchange.h: be slightly more verbose in comments
 	* set.h: new file
